<resources>
    <string name="app_name">PCETS NMIET</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Dont have an account ? </string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="about_us">NMIET was established in the year 2008. The institute is recognized by All India Council for Technical Education (AICTE) New Delhi and Directorate of Technical Education (DTE) Government of Maharashtra. It is affiliated to Savitribai Phule Pune University (SPPU), Pune. The institute runs four undergraduate courses. Undergraduate courses include Computer Engineering, Information Technology, Mechanical Engineering, Electronics and Telecommunication Engineering.</string>

    <string name="vision">We envision being dynamic-leading institute of ‘practice engineering and industrial research’ in the learning system that promotes learners towards development of ‘self-esteem, self-learning and creativity and innovation’ leading to development of successful professionals and members of society"
</string>

    <string name="mission">The Mission of the Institute is - “To educate and train the students on skill development and engineering education having Holistic development and global competencies required for employment/self-employment by imbibing a unique value system in the excellent academics and physical environment. Our mandate is to generate, preserve and share knowledge for developing a responsive individuals and professionals.”</string>

    <string name="placement">We, at NMIET try to connect with as many companies as possible for placement of students. We enjoy the advantage of getting cream layer of students at our institutes. Our Alumni are also performing well in the industries where they are placed. Hence we could get the recognition from industries. We believe that the backbone of our T&amp;P Cell is our student volunteers of T&amp;P Cell who work very hard with full enthusiasm to conduct the recruitment drives smoothly. All these volunteers develop their management skills, interpersonal skills and above all Leadership skills. All such student volunteers become Managers/ Project leaders earlier in their career as compared to their other counterpartsbecause of these skills. We would like to assure Industry, Studentsand Parents that we will not leave any stone unturned to make all our stakeholders Happy and Proud.</string>


    <string name="heading1">UTILISE TIME</string>
    <string name="heading2">DAILY LECTURES</string>
    <string name="heading3">ASK FOR DOUBTS</string>

    <string name="DESCRIPTION1">All lessons have been optimized to provide the points of every topic  in the most efficient way to ensure the best time utilization of the students. </string>
    <string name="DESCRIPTION2">The modules and study material are updated daily by our staff to keep the students engaged in studies at all times. </string>
    <string name="DESCRIPTION3">Ask for doubts to our Team at GyanShala who will make sure to follow up with your questions and provide the best solutions to clear your conceptions </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_about_college">AboutCollege</string>

</resources>