<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:id="@+id/top_relative"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/study"
            android:id="@+id/study_img"/>

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/study_img"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="WELCOME back!"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#2979FF"
            android:textSize="25sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_back"
            android:text="Sign in to continue"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"/>



    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/bottom_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:layout_below="@id/top_relative"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/phoneNo"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/mobile_no"
            app:hintTextColor="#000000"
            android:orientation="horizontal"
            app:startIconDrawable="@drawable/mob_vector"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
               />



        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/password"
            app:hintTextColor="#000000"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/pass_vector"
            app:passwordToggleEnabled="true"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/password"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:textStyle="normal"/>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00E676"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/login_button"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:id="@+id/dont_have_acc_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/login_button"
                android:text="@string/dont_have_an_account"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/sign_up"
                android:layout_marginLeft="5dp"
                android:textColor="#2979FF"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

        </LinearLayout>


    </RelativeLayout>




</RelativeLayout>