<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="90dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="name"
            app:hintTextColor="#000000"
            android:orientation="horizontal"
            app:startIconDrawable="@drawable/mob_vector"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/phoneNo"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/mobile_no"
            app:hintTextColor="#000000"
            android:orientation="horizontal"
            app:startIconDrawable="@drawable/mob_vector"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                />



        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/password"
            app:hintTextColor="#000000"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/pass_vector"
            app:passwordToggleEnabled="true"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="1dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="email"
                app:hintTextColor="#000000"
                android:layout_marginTop="15dp"
                app:startIconDrawable="@drawable/pass_vector"
                app:passwordToggleEnabled="true"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"

                    />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:background="#00E676"
            android:text="Submit"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/signup_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            >

        <TextView
            android:id="@+id/already_have_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/dont_have_an_account"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Log In"
            android:layout_marginLeft="5dp"
            android:textColor="#2979FF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>